header title now appearing correctly on ie11
ie11 is not a fan of the css value 'initial', eg 'height: initial', or 'position: initial'

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -18,7 +18,6 @@
   z-index: 3
 
   @include bp('portrait')
-    height: initial
     border-bottom-width: .6rem
 
   @include bp('landscape')
@@ -430,7 +429,7 @@
 
       &__img-ratio
         padding-bottom: 0
-        height: initial
+        height: auto
 
       &__overlay
-        position: initial
+        position: relative
